tests/miniJava/neg/004472_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( false int [] java ) { return 0 ; } }
